static/css/base.css
/* ... */
footer.background {
    width: 100%;
    padding-top: 1rem;
    background-color: #e85320;
    padding:10px 70px 0px;
}	       

footer ul li{
   padding:5px 0px;
   text-decoration: none;
}

.copyright span , .links span , .social span {
  color: #FFF; 
  font-weight: 800; 
  padding-bottom: 10px; 
  margin-bottom: 20px;
  display: block;
  text-transform: uppercase;
  font-size: 20px;
  letter-spacing: 3px;
}

.copyright li p , .links li a , .social li a {
   color:#FFF;
   letter-spacing: 2px;
   text-decoration: none;
   font-size: 15px;
}

.social li {
   float: left;
}

.social li a {
    letter-spacing: 25px;
    font-size: x-large;
 }
 
.copyright , .links , .social {
   list-style: none;
}

.fa {
   color: white;
   margin-right: 15px;
   font-size: large;
   letter-spacing: 25px;
}

.social i:hover {
    transition: all, .3s ease-in-out;
    -webkit-transform: scale(1.5);
    transform: scale(1.5);
}

.links a:hover {
    font-size: 120%;
    font-weight: bold;
}

/*...............................................Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: black;
}
    

.allauth-form-inner-content input {
    border-color: #000;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
    display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 25px;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	background: rgb(134, 7, 7);
    color: white !important;
    border-color: rgb(134, 7, 7);
}

/* .allauth-form-inner-content a {
	color: #17a2b8;
} */

/*...............................................Mailchimp */

#mc_embed_signup_email {
    background: #fff;
    clear: left;
    border: solid 2px black;
}

#mce-EMAIL {
    width: 100%;
    border-radius: 25px;
    border: solid 1px black;
}

.background-email {
    background-color: #22F2CF;
    padding: 20px;
}

.text-center {
    justify-content: center;
    margin: auto;
    text-align: center;
    width: 100%;
}

.subscribe-icon {
    font-size: 50px;
}

.input-email {
    border: solid 2px white;
    border-radius: 5px;
    float: right;
    height: 50px;
}

/*...............................................Bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/*...............................................Convenience classes - colors copied from Bootstrap */

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

.order-confirmation-wrapper {
    width: 100%;
    height: auto;
    overflow-x: hidden;
    overflow-y: auto;
}

/*...............................................Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: black;
}
    

.allauth-form-inner-content input {
    border-color: #000;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

/*...............................................Media Queries */

/* Extra large screens ≥1200px */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

/* Large ≥1200px */
@media (min-width: 992px) {
    #large-screen {
        display: none;
    }
}

/* Account navigation bar on screens 1084px and below */
@media (max-width: 1084px) {
    .main-nav {
        font-size: smaller;
    }

    .btn-link {
        font-size: small;
    }
}

/* Fixed top navbar */
@media (min-width: 992px) {

    /* .account-nav {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    } */

    .header-container {
        padding-top: 165px;
    }
}
/* ... */

